--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#">Activități</a>
             </li>
             <li class="list">
-                <a href="#">Cărți | Filme | seriale</a>
+                <a href="/pages/entertainment.html">Cărți | Filme | seriale</a>
             </li>
         </ul>
     </div>
